<resources>
    <string name="app_name">烟草执法助手</string>
    <string name="front_name">烟草执法助手</string>
    <string name="badge_num">工号</string>
    <string name="password">密码</string>
    <string name="save_password">保存密码</string>
    <string name="login">登录</string>
    <string name="content_description">烟草logo</string>
    <string name="part_1">32位码归属地查询</string>
    <string name="part_2">条形码扫描</string>
    <string name="search">搜索</string>
    <string name="last16Name">请输入后16位编码</string>
    <string name="companyName">烟草公司</string>
    <string name="homeLocation">归属地</string>
    <string name="licenseKey">许可证号</string>
    <string name="unknown">未知</string>
    <string name="tobacco">烟草</string>
    <string name="dialog_title">Alert</string>
    <string name="title_activity_main">BMainActivity</string>
    <string name="update">更新数据</string>
    <string name="print">打印</string>
    <string name="addNew">添加</string>
    <string name="finish">完成</string>
    <string name="testEntry">测试</string>
    <string name="menu">菜单</string>
    <string name="character">案件性质</string>

    <string-array name="reasonArray">
        <item>未在当地烟草专卖批发企业进货</item>
        <item>无烟草专卖零售许可证经营烟草制品零售业务</item>
        <item>销售专供出口卷烟</item>
        <item>销售无标志外国卷烟</item>
        <item>销售非法生产烟草专卖品</item>
        <item>无烟草专卖品准运证运输烟草专卖品</item>
        <item>待拓展案由</item>
    </string-array>
</resources>
