<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="demo.projectZero.FragmentA">

    <com.mancj.materialsearchbar.MaterialSearchBar
        android:id="@+id/searchBarA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        app:mt_hint="请输入卷烟后16位编码"
        app:mt_maxSuggestionsCount="10"
        app:mt_roundedSearchBarEnabled="true"
        app:mt_searchIconUseTint="true"
        app:mt_searchIconTint="@color/tbgreen"
        app:mt_searchIconDrawable="@drawable/tobacco_logo"
        app:mt_backIconUseTint="true"
        app:mt_backIconTint="@color/tbgreen"
        app:mt_clearIconUseTint="true"
        app:mt_clearIconTint="@color/tbgreen"
        app:mt_textCursorTint="@color/tbgreen"
        app:mt_placeholderColor="@color/tbgreen"
        app:mt_placeholder="\t\t\t\t\t\t\t\t请输入卷烟后16位编码"
        app:mt_speechMode="false" />

    <TextView
        android:id="@+id/companyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/searchBarA"
        android:layout_marginStart="36dp"
        android:layout_marginTop="97dp"
        android:text="@string/companyName"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/companyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/companyName"
        android:layout_alignBottom="@+id/companyName"
        android:layout_marginStart="35dp"
        android:layout_toEndOf="@+id/companyName"
        android:text="@string/unknown"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/companyName"
        android:layout_below="@+id/companyName"
        android:layout_marginTop="28dp"
        android:text="@string/homeLocation"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/homeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/companyText"
        android:layout_alignTop="@+id/home"
        android:text="@string/unknown"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/license"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/home"
        android:layout_below="@+id/home"
        android:layout_marginTop="28dp"
        android:text="许可证号"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/licenseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/homeText"
        android:layout_alignTop="@+id/license"
        android:clickable="true"
        android:text="未知"
        android:textSize="23.5sp" />


</RelativeLayout>
